testsuites/LLT/compiler/Diagnose/lex_test/lex_expected_identifier/case5.expect.out
error: unterminated single-line string
  ==> case5.cj:14:13:
   | 
14 |     "cangjie ${'}"
   |              ~~^^^^ unterminated single-line string
   |              |
   |              because this interpolation is not terminated with a '}'
   | 
   # note: consider using multi-line string if you intended to include '\n' in string

error: multi-line string may need start with newline character
  ==> case5.cj:16:17:
   | 
16 | "cangjie2 ${r'''}"
   |              ~~~^ excepted starting with newline character
   |              |
   |              because it is in multi-line string
   | 

2 errors generated, 2 errors printed.
